--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,3 +1,27 @@
 body {font-family: Helvetica; font-size: 20px; text-align: center;}
 .header {background-image: url(../images/the-flatiron-building.png);}
 .newyork {background-image: url(../images/the-flatiron-building.png);}
+footer {text-align: left; background-color: dimgray;}
+.h1{font-family: Helvetica;
+font-size: 70px;
+font-weight: bold;
+color: white;}
+.h2 {font-family: Helvetica;
+font-size: 32px;
+font-weight: bold;}
+.h3 {font-family: Helvetica;
+font-size: 23px;
+font-weight: bold;}
+h4 {font-family: Helvetica;
+font-size: 11px;
+color: white;
+background-color: dimgray;}
+p {font-family: Helvetica;
+font-size: 14px;}
+.newyork p {font-family: Helvetica;
+font-size: 23px;
+font-weight: bold;
+color: white;}
+a {font-family: Helvetica;
+font-size: 18px;
+color: white;}}
